# ComfyUI_HeartMuLa

./: .gitignore  LICENSE  README.md  __init__.py  deps-if-problems.txt  install.py  pyproject.toml
example_workflows/: Generate Music (APP Mode).json  Generate Music - Visualizers.json  Generate Music.json  Lyrics Transcriber.json
util/: audio_visualizer.py  demucs_node.py  milkdrop.py
util/heartlib/: __init__.py
util/heartlib/heartcodec/: configuration_heartcodec.py  modeling_heartcodec.py
util/heartlib/heartcodec/models/: flow_matching.py  sq_codec.py  transformer.py
util/heartlib/heartmula/: modeling_heartmula.py
util/heartlib/pipelines/: lyrics_transcription.py  music_generation.py
